Added tailwind Added header component

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,12 @@
-{{page-title "TddNotesUi"}}
+{{page-title "TDD Notes"}}
 
-<h2 id="title">Welcome to Ember</h2>
+<div class="bg-white text-gray-900 p-8 h-screen">
+  <Header></Header>
+  <div class="mx-auto mb-4">
 
-{{outlet}}
+    <div class="flex flex-wrap -mx-2">
+      {{outlet}}
+
+    </div>
+  </div>
+</div>
